feat: implement academic journals and lesson scheduling (closes #47) (#49)